--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "dependencies": {
+    "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "mysql2": "^3.16.0"
   },
- "scripts": {
-     "start:dev": "node --watch index.js"
+  "scripts": {
+    "start:dev": "node --watch index.js"
   }
 }
